# RAG_Document_Search

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_main.http
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_workspace_isolation.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  documents.py  posts.py  rag.py  search.py  web.py
app/core/: config.py  security.py
app/db/: models.py  session.py  sqlite_compat.py
app/schemas/: auth.py  documents.py  posts.py  rag.py  search.py
app/services/: ai_logging.py  ai_provider.py  chunking.py  costs.py  document_extraction.py  indexing.py  prompts.py  public_ingestion.py  rag.py  search.py  text.py  web_extraction.py  workspaces.py
app/static/: app.js  styles.css
app/templates/: base.html  dashboard.html  login.html  post_detail.html  post_form.html  provider_logs.html  rag.html  rag_document_search.html  register.html  search.html
app/templates/partials/: document_list.html  rag_answer.html  search_results.html  source_added.html
data/eval/: rag_eval.jsonl
docs/: architecture.md  deployment.md  implementation-plan.md  rag-from-scratch-analysis.md
scripts/: compare_prompts.py  run_rag_eval.py
tests/: conftest.py  test_auth_rbac.py  test_content_rag.py  test_services.py  test_web_extraction.py
