[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-blog-platform"
version = "0.1.0"
description = "Internal knowledge/blog platform with pgvector semantic search and RAG."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "bcrypt>=4.1.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openai>=1.82.0",
    "pgvector>=0.3.3",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.1",
    "PyJWT>=2.9.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["rag-from-scratch-main"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
